Add content to index

--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
     <a class="btn" href="#">Primary button</a>
   </div>
 
+  <div>
+    <a class="subbtn" href="#">Subtle button</a>
+  </div>
+
+  <div>
+    <a class="ghostbtn" href="#">Ghost button</a>
+  </div>
+
+  <div>
+    <a class="warnbtn" href="#">Warning button</a>
+  </div>
   <!-- Add all other button styles here with both the <div> & <a> tags -->
 
 </body>
