--- a/index.html
+++ b/index.html
@@ -24,6 +24,30 @@
   <div>
     <a class="warnbtn" href="#">Warning button</a>
   </div>
+
+  <div>
+    <a class="btn" href="#">Primary button small</a>
+  </div>
+
+  <div>
+    <a class="btn" href="#">Subtle button small</a>
+  </div>
+
+  <div>
+    <a class="btn" href="#">Ghost button small</a>
+  </div>
+
+  <div>
+    <a class="btn" href="#">Warning button small</a>
+  </div>
+
+  <div>
+    <a class="btn" href="#">Primary button big</a>
+  </div>
+
+  <div>
+    <a class="btn" href="#">Subtle button big</a>
+  </div>
   <!-- Add all other button styles here with both the <div> & <a> tags -->
 
 </body>
