--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
   <div>
     <a class="btn btn-subtle btn-big" href="#">Subtle button big</a>
   </div>
+
+  <div>
+    <a class="btn btn-ghost btn-big" href="#">Ghost button big</a>
+  </div>
+
+  <div>
+    <a class="btn btn-warning btn-big" href="#">Warning button big</a>
+  </div>
   <!-- Add all other button styles here with both the <div> & <a> tags -->
 
 </body>
